--- a/css/styles.css
+++ b/css/styles.css
@@ -209,6 +209,9 @@ body{
     max-width: 1120px;
   }
 
+  .brands__title{
+    padding-left: 32px;
+
     .brands__list {
     padding-left: 32px;
     column-gap: 32px;
