brands__title padding-left in 1120px

--- a/css/styles.css
+++ b/css/styles.css
@@ -209,8 +209,9 @@ body{
     max-width: 1120px;
   }
 
-  .brands__title{
+  .brands__title {
     padding-left: 32px;
+  }
 
     .brands__list {
     padding-left: 32px;
